# strings2xml

./: Cargo.toml
examples/: convert.rs
src/: lib.rs  main.rs
