[package]
name = "strings2xml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "*" }
regex = "1"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
